# rust_make_integration

./: .gitignore  CMakeLists.txt  README.md
include/: rust_math_interface.h
rust_math/: Cargo.toml
rust_math/src/: lib.rs
scripts/: build.sh
src/: main.cpp
