[package]
name = "rust_math_lib"
version = "0.1.0"
edition = "2021"

# Build as C-compatible library
[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Example dependency for math operations
num-traits = "0.2"

# Dependency for C FFI
libc = "0.2"

[profile.release]
# Optimization settings
opt-level = 3
lto = true
codegen-units = 1
